/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package messagepb;

import "isspb/isspb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/messagepb";

message Message {
  string dest_module = 1;
  oneof type {
    isspb.ISSMessage iss = 2;
  }
}
